# resume-selector

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: implementation-tasks.md
include/Common/: Version.h
include/Resume/: Experience.h  PersonalInfo.h  Project.h  ResumeData.h  Selector.h  Skill.h
include/Selector/: Selector.h
lib/Common/: Version.cpp
lib/Resume/: ResumeData.cpp  Selector.cpp
lib/Selector/: Selector.cpp
src/: main.cpp
src/utils/: getVersion.cpp
tests/: main.cpp
